<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:id="@+id/activity_main_layout"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".Main"
    android:alwaysDrawnWithCache="true"
    android:background="#000000"
    >

    <ImageView android:id="@+id/img_view" android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:contentDescription="animated"/>

    <Button
        android:focusable="true"
        android:clickable="true"
        android:id="@+id/start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:textColor="#000000"
        android:textSize="8pt"
        android:textStyle="bold"
        android:layout_above="@+id/settings"
        android:layout_alignLeft="@+id/instructions"
        android:layout_alignStart="@+id/instructions"
        android:layout_alignRight="@+id/instructions"
        android:layout_alignEnd="@+id/instructions"/>

    <Button
        android:focusable="true"
        android:clickable="true"
        android:id="@+id/settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:textColor="#000000"
        android:textSize="8pt"
        android:textStyle="bold"
        android:layout_above="@+id/instructions"
        android:layout_alignLeft="@+id/start"
        android:layout_alignStart="@+id/start"
        android:layout_alignRight="@+id/start"
        android:layout_alignEnd="@+id/start"/>

    <Button
        android:focusable="true"
        android:clickable="true"
        android:id="@+id/instructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instructions"
        android:textColor="#000000"
        android:textSize="8pt"
        android:textStyle="bold"
        android:layout_above="@+id/exit"
        android:layout_centerHorizontal="true"/>

    <Button
        android:focusable="true"
        android:clickable="true"
        android:id="@+id/exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exit"
        android:textColor="#000000"
        android:textSize="8pt"
        android:textStyle="bold"
        android:layout_marginBottom="25dp"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/start"
        android:layout_alignStart="@+id/start"
        android:layout_alignRight="@+id/start"
        android:layout_alignEnd="@+id/start"/>


</RelativeLayout>
